--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -2,6 +2,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/item.js"></script>
 
     <div class="content">
         <div class="col-lg-offset-2 col-lg-4">
@@ -79,20 +80,3 @@
         </div>
     </div>
 </html>
-
-<script>
-    $(document).ready(function() {
-        $("#editBtn").click(function () {
-            var itemId = $("#itemId").text();
-            window.location = "/edit/" + itemId;
-        });
-
-        $("#backBtn").click(function () {
-            window.location = "/store";
-        });
-
-        $("body").on("click", ".remove", function() {
-            $(this).parents(".input-group").remove();
-        });
-    });
-</script>
